fixed flex from footer

--- a/index.html
+++ b/index.html
@@ -173,18 +173,23 @@
           </div>
         </div>
 
-        <div class="container ">
-          <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
-            <p class="col-md-4 mb-0"><a href="https://github.com/lucasclivati" class="text-decoration-none" style="color: #251629;">&copy; 2022 by Lucas Clivati</a></p>
-        
-            <a href="/" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
-              <img src="files/logo/logo.png" alt="Logo CSGO News" height="90">
+        <div class="container">
+          <footer class="d-flex flex-wrap justify-content-between align-items-center py-1 my-1 border-top">
+            <div class="col justify-content-start">
+              <ul class="nav">
+                <li class="nav-item"><a href="#" class="nav-link px-2">Área Privada</a></li>
+                <li class="nav-item"><a href="#" class="nav-link px-2">Fale Conosco</a></li>
+                <li class="nav-item"><a href="#" class="nav-link px-2">Notícias</a></li>
+              </ul>
+            </div>
+            <div class="col"><a href="#" class="col me-md-auto">
+              <img src="files/logo/logo.png" alt="Logo CSGO News" height="90" >
             </a>
-            <ul class="nav col-md-4 justify-content-end">
-              <li class="nav-item"><a href="#" class="nav-link px-2">Área Privada</a></li>
-              <li class="nav-item"><a href="#" class="nav-link px-2">Fale Conosco</a></li>
-              <li class="nav-item"><a href="#" class="nav-link px-2">Notícias</a></li>
-            </ul>
+          </div>
+            <div>
+              <a href="https://github.com/lucasclivati" class="text-decoration-none" style="color: #251629;"><p>&copy; 2022 Lucas Clivati</p></a>
+            </div>
+            
           </footer>
         </div>
 </body>
