--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
       <div class="collapse navbar-collapse justify-content-sm-end m-1" id="navmenulista">
         <ul class="navbar-nav float-end my-2">
           <li class="nav-item">
-            <a class="nav-link" href="#"><button class="btn btn-outline-secondary" type="button">Área privada</button></a>
-          </li>
-          <li class="nav-item" id="btnmenu2">
-            <a class="nav-link" href="#"><button class="btn btn-outline-secondary" type="button">Fale conosco</button></a>
+            <a class="nav-link" href="areaprivada.html"><button class="btn btn-outline-secondary" type="button">Área privada</button></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#"><button class="btn btn-outline-light" type="button">Notícias</button></a>
+            <a class="nav-link" href="faleconosco.html"><button class="btn btn-outline-secondary" type="button">Fale conosco</button></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="noticias.html"><button class="btn btn-outline-light" type="button">Notícias</button></a>
           </li>
         </ul>
       </div>
@@ -99,7 +99,7 @@
     </div>
         <div class="container text-center my-1 px-2">
           <div class="d-flex flex-wrap align-items-center py-3 my-4">
-            <!-- esse método é pro terrorista aparecer direto do html do lottie, como tava muito lento, foi alterado pra puxar direto do json. <div><lottie-player src="https://assets5.lottiefiles.com/packages/lf20_smu40fjv.json"  background="transparent"  speed="1"  style="height: 80px;"  loop autoplay></lottie-player> -->
+            <!-- esse método é pro terrorista aparecer direto no html via embed do lottieplayer, como tava muito lento, foi alterado pra puxar direto do json. <div><lottie-player src="https://assets5.lottiefiles.com/packages/lf20_smu40fjv.json"  background="transparent"  speed="1"  style="height: 80px;"  loop autoplay></lottie-player> -->
               <div id="terrorista">
               </div>
               <div><h1 class="display-3 fw-semibold border-bottom">Notícias Atuais</h1>
@@ -177,9 +177,9 @@
           <footer class="d-flex flex-wrap justify-content-between align-items-center py-1 my-1 border-top">
             <div class="col justify-content-start">
               <ul class="nav">
-                <li class="nav-item"><a href="#" class="nav-link px-2">Área Privada</a></li>
-                <li class="nav-item"><a href="#" class="nav-link px-2">Fale Conosco</a></li>
-                <li class="nav-item"><a href="#" class="nav-link px-2">Notícias</a></li>
+                <li class="nav-item"><a href="areaprivada.html" class="nav-link px-2">Área Privada</a></li>
+                <li class="nav-item"><a href="faleconosco.html" class="nav-link px-2">Fale Conosco</a></li>
+                <li class="nav-item"><a href="noticias.html" class="nav-link px-2">Notícias</a></li>
               </ul>
             </div>
             <div class="col"><a href="#" class="col me-md-auto">
