model of pages defined

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
             </div>
           </div>
         </div>
-
+    </body>
         <div class="container">
           <footer class="d-flex flex-wrap justify-content-between align-items-center py-1 my-1 border-top">
             <div class="col justify-content-start">
@@ -182,17 +182,14 @@
                 <li class="nav-item"><a href="noticias.html" class="nav-link px-2">Notícias</a></li>
               </ul>
             </div>
-            <div class="col"><a href="#" class="col me-md-auto">
-              <img src="files/logo/logo.png" alt="Logo CSGO News" height="90" >
-            </a>
-          </div>
+            <div class="col">
+              <a href="index.html" class="col me-md-auto"><img src="files/logo/logo.png" alt="Logo CSGO News" height="90" ></a>
+            </div>
             <div>
               <a href="https://github.com/lucasclivati" class="text-decoration-none" style="color: #251629;"><p>&copy; 2022 Lucas Clivati</p></a>
             </div>
-            
           </footer>
         </div>
-</body>
 </html>
 <script>
   var animation = bodymovin.loadAnimation({
