fixed all pages footer

--- a/areaprivada.html
+++ b/areaprivada.html
@@ -45,7 +45,15 @@
         </div>
     </nav>
     <body>
-        
+        <div class="container text-center my-1 px-2">
+            <div class="d-flex flex-wrap align-items-center py-3 my-4">
+              <!-- esse método é pro terrorista aparecer direto no html via embed do lottieplayer, como tava muito lento, foi alterado pra puxar direto do json. <div><lottie-player src="https://assets5.lottiefiles.com/packages/lf20_smu40fjv.json"  background="transparent"  speed="1"  style="height: 80px;"  loop autoplay></lottie-player> -->
+                <div id="terrorista">
+                </div>
+                <div><h1 class="display-3 fw-semibold border-bottom">Área Privada</h1>
+                </div>
+            </div>
+          </div>
         </body>
 
     <div class="container">
@@ -57,10 +65,10 @@
             <li class="nav-item"><a href="noticias.html" class="nav-link px-2">Notícias</a></li>
             </ul>
         </div>
-        <div class="col">
+        <div class="col text-center">
             <a href="index.html" class="col me-md-auto"><img src="files/logo/logo.png" alt="Logo CSGO News" height="90" ></a>
         </div>
-        <div>
+        <div class="col text-end">
             <a href="https://github.com/lucasclivati" class="text-decoration-none" style="color: #251629;"><p>&copy; 2022 Lucas Clivati</p></a>
         </div>
         </footer>
