--- a/index.html
+++ b/index.html
@@ -182,10 +182,10 @@
                 <li class="nav-item"><a href="noticias.html" class="nav-link px-2">Notícias</a></li>
               </ul>
             </div>
-            <div class="col">
+            <div class="col text-center">
               <a href="index.html" class="col me-md-auto"><img src="files/logo/logo.png" alt="Logo CSGO News" height="90" ></a>
             </div>
-            <div>
+            <div class="col text-end">
               <a href="https://github.com/lucasclivati" class="text-decoration-none" style="color: #251629;"><p>&copy; 2022 Lucas Clivati</p></a>
             </div>
           </footer>
