--- a/paginamodelo.html
+++ b/paginamodelo.html
@@ -46,6 +46,7 @@
     </nav>
     <body>
         <!-- PAGINA PRA SER COPIADA PARA FAZER OUTRAS PÁGINAS, CASO SEJA NECESSÁRIO -->
+        <h1>PÁGINA MODELO</h1>
         </body>
 
     <div class="container">
@@ -57,12 +58,12 @@
             <li class="nav-item"><a href="noticias.html" class="nav-link px-2">Notícias</a></li>
             </ul>
         </div>
-        <div class="col">
+        <div class="col text-center">
             <a href="index.html" class="col me-md-auto"><img src="files/logo/logo.png" alt="Logo CSGO News" height="90" ></a>
-        </div>
-        <div>
+          </div>
+          <div class="col text-end">
             <a href="https://github.com/lucasclivati" class="text-decoration-none" style="color: #251629;"><p>&copy; 2022 Lucas Clivati</p></a>
-        </div>
+          </div>
         </footer>
     </div>
         
