added titles to pages

--- a/areaprivada.html
+++ b/areaprivada.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>CSGO NEWS - Seu portal de Notícias de Counter-Strike</title>
+        <title>Área Privada | CSGO NEWS - Seu portal de Notícias de Counter-Strike</title>
         <link rel="shortcut icon" href="files/logo/icon.png" type="image/x-icon">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -45,8 +45,8 @@
         </div>
     </nav>
     <body>
-        <div class="container text-center my-1 px-2">
-            <div class="d-flex flex-wrap align-items-center py-3 my-4">
+        <div class="container my-1 px-2">
+            <div class="d-flex flex-wrap justify-content-center py-3 my-4">
               <!-- esse método é pro terrorista aparecer direto no html via embed do lottieplayer, como tava muito lento, foi alterado pra puxar direto do json. <div><lottie-player src="https://assets5.lottiefiles.com/packages/lf20_smu40fjv.json"  background="transparent"  speed="1"  style="height: 80px;"  loop autoplay></lottie-player> -->
                 <div id="terrorista">
                 </div>
