--- a/faleconosco.html
+++ b/faleconosco.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>CSGO NEWS - Seu portal de Notícias de Counter-Strike</title>
+        <title>Fale Conosco | CSGO NEWS - Seu portal de Notícias de Counter-Strike</title>
         <link rel="shortcut icon" href="files/logo/icon.png" type="image/x-icon">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -45,8 +45,15 @@
         </div>
     </nav>
     <body>
-        <!-- PAGINA PRA SER COPIADA PARA FAZER OUTRAS PÁGINAS, CASO SEJA NECESSÁRIO -->
-        <h1>Fale Conosco</h1>
+        <div class="container my-1 px-2">
+            <div class="d-flex flex-wrap justify-content-center py-3 my-4">
+              <!-- esse método é pro terrorista aparecer direto no html via embed do lottieplayer, como tava muito lento, foi alterado pra puxar direto do json. <div><lottie-player src="https://assets5.lottiefiles.com/packages/lf20_smu40fjv.json"  background="transparent"  speed="1"  style="height: 80px;"  loop autoplay></lottie-player> -->
+                <div id="terrorista">
+                </div>
+                <div><h1 class="display-3 fw-semibold border-bottom">Fale Conosco</h1>
+                </div>
+            </div>
+          </div>
         </body>
 
     <div class="container">
@@ -60,10 +67,10 @@
         </div>
         <div class="col text-center">
             <a href="index.html" class="col me-md-auto"><img src="files/logo/logo.png" alt="Logo CSGO News" height="90" ></a>
-          </div>
-          <div class="col text-end">
+        </div>
+        <div class="col text-end">
             <a href="https://github.com/lucasclivati" class="text-decoration-none" style="color: #251629;"><p>&copy; 2022 Lucas Clivati</p></a>
-          </div>
+        </div>
         </footer>
     </div>
         
