--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CSGO NEWS - Seu portal de Notícias de Counter-Strike</title>
+    <title>Home | CSGO NEWS - Seu portal de Notícias de Counter-Strike</title>
     <link rel="shortcut icon" href="files/logo/icon.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -97,8 +97,8 @@
             <span class="visually-hidden">Next</span>
         </button>
     </div>
-        <div class="container text-center my-1 px-2">
-          <div class="d-flex flex-wrap align-items-center py-3 my-4">
+        <div class="container">
+          <div class="d-flex flex-wrap justify-content-center mt-4">
             <!-- esse método é pro terrorista aparecer direto no html via embed do lottieplayer, como tava muito lento, foi alterado pra puxar direto do json. <div><lottie-player src="https://assets5.lottiefiles.com/packages/lf20_smu40fjv.json"  background="transparent"  speed="1"  style="height: 80px;"  loop autoplay></lottie-player> -->
               <div id="terrorista">
               </div>
@@ -106,7 +106,7 @@
               </div>
           </div>
         </div>
-        <div class="container px-2 py-2" id="custom-cards">
+        <div class="container px-2" id="custom-cards">
           <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5">
             <div class="col">
               <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg" style="background-image: url('files/imgs/csgo-image.jpeg');">
