--- a/cadastro.html
+++ b/cadastro.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Área Privada | CSGO NEWS - Seu portal de Notícias de Counter-Strike</title>
+        <title>Cadastro | CSGO NEWS - Seu portal de Notícias de Counter-Strike</title>
         <link rel="shortcut icon" href="files/logo/icon.png" type="image/x-icon">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -72,35 +72,36 @@
               <!-- esse método é pro terrorista aparecer direto no html via embed do lottieplayer, como tava muito lento, foi alterado pra puxar direto do json. <div><lottie-player src="https://assets5.lottiefiles.com/packages/lf20_smu40fjv.json"  background="transparent"  speed="1"  style="height: 80px;"  loop autoplay></lottie-player> -->
                 <div id="terrorista">
                 </div>
-                <div><h1 class="display-3 fw-semibold border-bottom">Área Privada</h1>
+                <div><h1 class="display-3 fw-semibold border-bottom">Cadastre-se</h1>
                 </div>
             </div>
           </div>
-        <main class="form-signin m-auto">
-          <form>
-            <div class="btn-group" role="group" aria-label="Botoes Login" class="d-flex align-content-center">
-                <button class="btn btn-primary" disabled type="submit">Área Privada</button>
-                <a class="btn btn-outline-primary" type="submit" href="cadastro.html">Cadastrar-se</a>
-            </div>
-            <p class="my-2">
-                Realize seu login para postar notícias quentinhas de CSGO.
-            </p>
-            <div class="form-floating">
-              <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-              <label for="floatingInput">Endereço E-mail</label>
-            </div>
-            <div class="form-floating">
-              <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
-              <label for="floatingPassword">Senha</label>
-            </div>
-            <div class="checkbox mb-3">
-              <label>
-                <input type="checkbox" value="remember-me"> Lembrar-me
-              </label>
-            </div>
-            <button class="w-100 btn btn-lg btn-primary" type="submit">Entrar</button>
-          </form>
-        </main>
+            <main class="form-signin m-auto">
+                <form>
+                    <div class="btn-group" role="group" aria-label="Botoes Login" class="d-flex align-content-center">
+                        <a class="btn btn-outline-primary" type="submit" href="areaprivada.html">Área Privada</a>
+                        <button class="btn btn-primary" disabled type="submit">Cadastrar-se</button>
+                    </div>
+                    <p class="my-2">
+                        Cadestre-se para postar notícias novas de CSGO.
+                    </p>
+                    <div class="form-floating">
+                    <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+                    <label for="floatingInput">Endereço E-mail</label>
+                    </div>
+                    <div class="form-floating">
+                    <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+                    <label for="floatingPassword">Senha</label>
+                    </div>
+                    <div class="checkbox mb-3">
+                    <label>
+                        <input type="checkbox" value="remember-me"> Lembrar-me
+                    </label>
+                    </div>
+                    <button class="w-100 btn btn-lg btn-primary" type="submit">Entrar</button>
+                </form>
+            </main>
+
         </body>
     <div class="container">
         <footer class="d-flex flex-wrap justify-content-between align-items-center py-1 my-1 border-top">
