--- a/areaprivada.html
+++ b/areaprivada.html
@@ -76,12 +76,12 @@
                 </div>
             </div>
           </div>
-        <main class="form-signin m-auto">
-          <form>
-            <div class="btn-group" role="group" aria-label="Botoes Login" class="d-flex align-content-center">
-                <button class="btn btn-primary" disabled type="submit">Área Privada</button>
-                <a class="btn btn-outline-primary" type="submit" href="cadastro.html">Cadastrar-se</a>
-            </div>
+        <main class="form-signin m-auto bg-light mb-5 border">
+          <form class="">
+                <div class="d-flex justify-content-center btn-group" role="group" aria-label="Botoes Login" class="d-flex align-content-center">
+                    <button class="col btn btn-primary" disabled type="submit">Área Privada</button>
+                    <a class="col btn btn-outline-primary" type="submit" href="cadastro.html">Cadastrar-se</a>
+                </div>
             <p class="my-2">
                 Realize seu login para postar notícias quentinhas de CSGO.
             </p>
