--- a/cadastro.html
+++ b/cadastro.html
@@ -31,10 +31,15 @@
             z-index: 2;
             }
 
-            .form-signin input[type="email"] {
+            .form-signin input[type="name"] {
             margin-bottom: -1px;
             border-bottom-right-radius: 0;
             border-bottom-left-radius: 0;
+            }
+
+            .form-signin input[type="email"] {
+            margin-bottom: -1px;
+            border-radius: 0;
             }
 
             .form-signin input[type="password"] {
@@ -76,29 +81,28 @@
                 </div>
             </div>
           </div>
-            <main class="form-signin m-auto">
+            <main class="form-signin m-auto bg-light mb-5 border">
                 <form>
-                    <div class="btn-group" role="group" aria-label="Botoes Login" class="d-flex align-content-center">
+                    <div class="d-flex justify-content-center btn-group" role="group" aria-label="Botoes Login" class="d-flex align-content-center">
                         <a class="btn btn-outline-primary" type="submit" href="areaprivada.html">Área Privada</a>
                         <button class="btn btn-primary" disabled type="submit">Cadastrar-se</button>
                     </div>
                     <p class="my-2">
-                        Cadestre-se para postar notícias novas de CSGO.
+                        Cadastre-se para postar notícias novas de CSGO.
                     </p>
                     <div class="form-floating">
-                    <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-                    <label for="floatingInput">Endereço E-mail</label>
+                        <input type="name" class="form-control" id="floatingName" placeholder="Nome Sobrenome">
+                        <label for="floatingInput">Nome Completo</label>
                     </div>
                     <div class="form-floating">
-                    <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
-                    <label for="floatingPassword">Senha</label>
+                        <input type="email" class="form-control" id="floatingEmail" placeholder="name@example.com">
+                        <label for="floatingEmail">Endereço E-mail</label>
                     </div>
-                    <div class="checkbox mb-3">
-                    <label>
-                        <input type="checkbox" value="remember-me"> Lembrar-me
-                    </label>
+                    <div class="form-floating">
+                        <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+                        <label for="floatingPassword">Senha</label>
                     </div>
-                    <button class="w-100 btn btn-lg btn-primary" type="submit">Entrar</button>
+                    <button class="w-100 btn btn-lg btn-primary" type="submit" id="cadastrarse">Cadastrar-se agora</button>
                 </form>
             </main>
 
