front-end first version finish

--- a/areaprivada.html
+++ b/areaprivada.html
@@ -79,8 +79,8 @@
         <main class="form-signin m-auto bg-light mb-5 border">
           <form class="">
                 <div class="d-flex justify-content-center btn-group" role="group" aria-label="Botoes Login" class="d-flex align-content-center">
-                    <button class="col btn btn-primary" disabled type="submit">Área Privada</button>
-                    <a class="col btn btn-outline-primary" type="submit" href="cadastro.html">Cadastrar-se</a>
+                    <button class="col btn btn-dark" disabled type="submit">Área Privada</button>
+                    <a class="col btn btn-outline-dark" type="submit" href="cadastro.html">Cadastrar-se</a>
                 </div>
             <p class="my-2">
                 Realize seu login para postar notícias quentinhas de CSGO.
@@ -98,7 +98,7 @@
                 <input type="checkbox" value="remember-me"> Lembrar-me
               </label>
             </div>
-            <button class="w-100 btn btn-lg btn-primary" type="submit">Entrar</button>
+            <button class="w-100 btn btn-lg btn-dark" type="submit">Entrar</button>
           </form>
         </main>
         </body>
