--- a/cadastro.html
+++ b/cadastro.html
@@ -84,8 +84,8 @@
             <main class="form-signin m-auto bg-light mb-5 border">
                 <form>
                     <div class="d-flex justify-content-center btn-group" role="group" aria-label="Botoes Login" class="d-flex align-content-center">
-                        <a class="btn btn-outline-primary" type="submit" href="areaprivada.html">Área Privada</a>
-                        <button class="btn btn-primary" disabled type="submit">Cadastrar-se</button>
+                        <a class="btn btn-outline-dark" type="submit" href="areaprivada.html">Área Privada</a>
+                        <button class="btn btn-dark" disabled type="submit">Cadastrar-se</button>
                     </div>
                     <p class="my-2">
                         Cadastre-se para postar notícias novas de CSGO.
@@ -102,7 +102,7 @@
                         <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
                         <label for="floatingPassword">Senha</label>
                     </div>
-                    <button class="w-100 btn btn-lg btn-primary" type="submit" id="cadastrarse">Cadastrar-se agora</button>
+                    <button class="w-100 btn btn-lg btn-dark" type="submit" id="cadastrarse">Cadastrar-se agora</button>
                 </form>
             </main>
 
