--- a/faleconosco.html
+++ b/faleconosco.html
@@ -46,16 +46,57 @@
     </nav>
     <body>
         <div class="container my-1 px-2">
-            <div class="d-flex flex-wrap justify-content-center py-3 my-4">
-              <!-- esse método é pro terrorista aparecer direto no html via embed do lottieplayer, como tava muito lento, foi alterado pra puxar direto do json. <div><lottie-player src="https://assets5.lottiefiles.com/packages/lf20_smu40fjv.json"  background="transparent"  speed="1"  style="height: 80px;"  loop autoplay></lottie-player> -->
-                <div id="terrorista">
-                </div>
-                <div><h1 class="display-3 fw-semibold border-bottom">Fale Conosco</h1>
-                </div>
+          </div>
+          <div class="px-4 my-5 text-center">
+            <h1 class="display-5 fw-bold">Ficou com alguma dúvida?</h1>
+            <div class="col-lg-6 mx-auto">
+              <p class="lead mb-4">Visite nossa lan-house ou preencha o formulário e entraremos em contato!</p>
             </div>
           </div>
+          <div class="px-4 mt-5 text-center">
+            <div>
+              <h2>Unidade Balneário Camboriú</h2>
+              <p>Rua Lourival Cesário Pereira, s/n, Edifício Alcides Abreu <br> Nova Esperança - Balneário Camboriú – CEP: 88336-275 <br> Dica: fica na UDESC! <i class="bi bi-emoji-smile-upside-down"></i></p>
+              <a href="https://www.google.com/maps/place/UDESC+-+Universidade+do+Estado+de+Santa+Catarina+-+CESFI/@-27.0212998,-48.6167742,17.25z/data=!4m5!3m4!1s0x94d8b710bb4cb759:0x19131a35dfc0c4fa!8m2!3d-27.0217397!4d-48.6153993"><button type="submit" class="btn btn-dark btn-sm">Abrir no Google Maps</button></a>
+            </div>
+            <div class="mt-5">
+              <h3>Contato</h3>
+            </div>
+            <div class="mx-auto" style="width: 450px">
+              <ul class="list-group">
+                <li class="list-group-item border-0"> Telefone  <i class="bi bi-phone-fill"></i><a href="tel:(47)33986592" class="text-decoration-none fw-bold"> (47) 3398-6592</a></a> </li>
+                <li class="list-group-item border-0"> Whatsapp  <i class="bi bi-whatsapp"></i><a href="https://api.whatsapp.com/send?phone=554799999000" class="text-decoration-none fw-bold"> (47) 99999-0000  </a></li>
+                <li class="list-group-item border-0">E-mail  <i class="bi bi-envelope"></i><a href="mailto:contato@udescmove.com" class="text-decoration-none fw-bold"> contato@csgonews.com </a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="mt-5 mb-3 text-center">
+            <div class="mt-5">
+                <h3>E-mail CSGO News!</h3>
+            </div>
+          </div>
+          <div class="mb-5">
+            <form class="mx-auto" style="width: 450px">
+              <div class="mb-2">
+                <label for="nomecompleto" class="form-label">Nome Completo</label>
+                <input type="text" class="form-control" id="nomecompleto">
+              </div>
+              <div class="mb-2">
+                <label for="cpf" class="form-label">CPF</label>
+                <input type="text" class="form-control" id="cpf">
+              </div>
+              <div class="mb-2">
+                <label for="emailparceiro" class="form-label">Email</label>
+                <input type="email" class="form-control" id="emailparceiro">
+              </div>
+              <div class="mb-4">
+                <label for="duvida" class="form-label">Dúvida / Sugestão</label>
+                <input type="text" class="form-control" id="duvida">
+              </div>
+              <button type="submit" class="btn btn-outline-dark mb-5">Enviar</button>
+            </form>
+          </div>
         </body>
-
     <div class="container">
         <footer class="d-flex flex-wrap justify-content-between align-items-center py-1 my-1 border-top">
         <div class="col justify-content-start">
