--- a/noticias.html
+++ b/noticias.html
@@ -53,6 +53,7 @@
                 <div><h1 class="display-3 fw-semibold border-bottom">Notícias</h1>
                 </div>
             </div>
+            <p>Aqui devem aparecer todas as notícias via php.</p>
           </div>
         </body>
 
