--- a/faleconosco.html
+++ b/faleconosco.html
@@ -62,7 +62,7 @@
             <div class="mt-5">
               <h3>Contato</h3>
             </div>
-            <div class="mx-auto" style="width: 450px">
+            <div class="mx-auto">
               <ul class="list-group">
                 <li class="list-group-item border-0"> Telefone  <i class="bi bi-phone-fill"></i><a href="tel:(47)33986592" class="text-decoration-none fw-bold"> (47) 3398-6592</a></a> </li>
                 <li class="list-group-item border-0"> Whatsapp  <i class="bi bi-whatsapp"></i><a href="https://api.whatsapp.com/send?phone=554799999000" class="text-decoration-none fw-bold"> (47) 99999-0000  </a></li>
@@ -76,7 +76,7 @@
             </div>
           </div>
           <div class="mb-5">
-            <form class="mx-auto" style="width: 450px">
+            <form class="mx-auto" style="width: 82vw">
               <div class="mb-2">
                 <label for="nomecompleto" class="form-label">Nome Completo</label>
                 <input type="text" class="form-control" id="nomecompleto">
