--- a/index.html
+++ b/index.html
@@ -99,8 +99,11 @@
     </div>
         <div class="container">
           <div class="d-flex flex-wrap justify-content-center mt-4">
-            <!-- esse método é pro terrorista aparecer direto no html via embed do lottieplayer, como tava muito lento, foi alterado pra puxar direto do json. <div><lottie-player src="https://assets5.lottiefiles.com/packages/lf20_smu40fjv.json"  background="transparent"  speed="1"  style="height: 80px;"  loop autoplay></lottie-player> -->
+            <!-- essa div debaixo puxaria automaticamente o terrorista girando via js (var animation), mas o inifinity não carregou arquivo json.
               <div id="terrorista">
+              </div>-->
+              <div>
+                <lottie-player src="https://assets5.lottiefiles.com/packages/lf20_smu40fjv.json"  background="transparent"  speed="1"  style="height: 80px;"  loop autoplay></lottie-player>
               </div>
               <div><h1 class="display-3 fw-semibold border-bottom">Notícias Atuais</h1>
               </div>
