--- a/faleconosco.html
+++ b/faleconosco.html
@@ -76,7 +76,7 @@
             </div>
           </div>
           <div class="mb-5">
-            <form class="mx-auto" style="width: 82vw">
+            <form class="mx-auto" style="width: 82vw; max-width: 450px;">
               <div class="mb-2">
                 <label for="nomecompleto" class="form-label">Nome Completo</label>
                 <input type="text" class="form-control" id="nomecompleto">
