--- a/areaprivada.html
+++ b/areaprivada.html
@@ -103,6 +103,7 @@
             </div>
             <button class="w-100 btn btn-lg btn-dark" type="submit">Entrar</button>
           </form>
+          <p class="text-center mt-3">Sem cadastro? Crie um <a href="cadastro.html">agora</a>.</p>
         </main>
         </body>
     <div class="container">
