--- a/cadastro.html
+++ b/cadastro.html
@@ -85,7 +85,7 @@
             </div>
           </div>
             <main class="form-signin m-auto bg-light mb-5 border">
-                <form>
+                <form action="">
                     <div class="d-flex justify-content-center btn-group" role="group" aria-label="Botoes Login" class="d-flex align-content-center">
                         <a class="btn btn-outline-dark" type="submit" href="areaprivada.html">Área Privada</a>
                         <button class="btn btn-dark" disabled type="submit">Cadastrar-se</button>
