--- a/lancarnoticias.html
+++ b/lancarnoticias.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Página Modelo | CSGO NEWS - Seu portal de Notícias de Counter-Strike</title>
+        <title>Lançar Noticias | CSGO NEWS - Seu portal de Notícias de Counter-Strike</title>
         <link rel="shortcut icon" href="files/logo/icon.png" type="image/x-icon">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -53,10 +53,13 @@
                 <div>
                   <lottie-player src="https://assets5.lottiefiles.com/packages/lf20_smu40fjv.json"  background="transparent"  speed="1"  style="height: 80px;"  loop autoplay></lottie-player>
                 </div>
-                <div><h1 class="display-3 fw-semibold border-bottom">Notícias Atuais</h1>
+                <div><h1 class="display-3 fw-semibold border-bottom">Administrador</h1>
                 </div>
             </div>
           </div>
+          <h2 class="container my-1 px-2 d-flex flex-wrap justify-content-center">Esta é sua área privada. Gerencie notícias aqui.</h2>
+          <p class="container my-1 px-2">Texto.</p>
+        </body>
 
     <div class="container">
         <footer class="d-flex flex-wrap justify-content-between align-items-center py-1 my-1 border-top">
