checked if email already exists in db

--- a/Roadmap.html
+++ b/Roadmap.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,13 +10,10 @@
     <p>
         <table>
             <th>REQUISITOS:</th>
-                <li>lançar noticias oficiais</li>
+                <li>usuário alterar sua foto</li>
                 <li>email de recuperação</li>
                 <li>botão lembrar-me ficar com login feito</li>
-                <li>notificação pra cima na direita</li>
-                <li>ler documentação referenciada na aula</li>
-                <li>usuário alterar sua foto</li>
-                <li>não permitir que seja criado um usuário já cadastrado</li>
+                <li>lançar noticias oficiais</li>
             </table>
             <table>
             <th>EXTRAS:</th>
