--- a/Roadmap.html
+++ b/Roadmap.html
@@ -10,13 +10,15 @@
     <p>
         <table>
             <th>REQUISITOS:</th>
-                <li>usuário alterar sua foto</li>
-                <li>email de recuperação</li>
-                <li>botão lembrar-me ficar com login feito</li>
-                <li>lançar noticias oficiais</li>
+                <li>lançar noticias oficiais aparecer na home</li>
+                <li>editar notícias na área de edição</li>
+                <li>fazer uma página individual de cada noticia</li>
             </table>
             <table>
             <th>EXTRAS:</th>
+                <li>usuário alterar sua foto</li>
+                <li>botão lembrar-me ficar com login feito</li>
+                <li>email de recuperação</li>
                 <li>dark/light theme</li>
                 <li>usuário (inscrever-se)</li>
                 <li>usuário curtir, usuário ver suas noticias curtidas</li>
