--- a/Roadmap.html
+++ b/Roadmap.html
@@ -10,7 +10,8 @@
     <p>
         <table>
             <th>REQUISITOS:</th>
-                <li>lançar noticias oficiais aparecer na home</li>
+                <li>lançar as noticias no banco de dados</li>
+                <li>aparecer as noticias na home</li>
                 <li>editar notícias na área de edição</li>
                 <li>fazer uma página individual de cada noticia</li>
             </table>
