transfered php files to src folder and fixed path

--- a/Roadmap.html
+++ b/Roadmap.html
@@ -12,8 +12,9 @@
             <th>REQUISITOS:</th>
                 <li>lançar as noticias no banco de dados</li>
                 <li>aparecer as noticias na home</li>
-                <li>editar notícias na área de edição</li>
+                <li>editar notícias na área privada</li>
                 <li>fazer uma página individual de cada noticia</li>
+                <li>jogar os arquivos php pra pastar src</li>
             </table>
             <table>
             <th>EXTRAS:</th>
