--- a/Roadmap.html
+++ b/Roadmap.html
@@ -10,13 +10,13 @@
     <p>
         <table>
             <th>REQUISITOS:</th>
-                <li>lançar as noticias no banco de dados</li>
+                <li>RE-lançar as noticias no banco de dados</li>
                 <li>aparecer as noticias na home</li>
                 <li>editar notícias na área privada</li>
                 <li>fazer uma página individual de cada noticia</li>
-                <li>jogar os arquivos php pra pastar src</li>
-            </table>
-            <table>
+                <li>permitir alterar foto perfil</li>
+        </table>
+        <table>
             <th>EXTRAS:</th>
                 <li>usuário alterar sua foto</li>
                 <li>botão lembrar-me ficar com login feito</li>
@@ -26,7 +26,7 @@
                 <li>usuário curtir, usuário ver suas noticias curtidas</li>
                 <li>usuário receber notificação whatsapp nova notícia</li>
                 <li>default time zone</li>
-            </table>
+        </table>
     </p>
 </body>
 </html>
