--- a/Roadmap.html
+++ b/Roadmap.html
@@ -6,27 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ROADMAP</title>
 </head>
-<body>
-    <p>
+<body class="container">
+    <h1>Roadmap de Implementações</h1>
+    <p>Listagem de coisas a ir fazendo:</p>
         <table>
             <th>REQUISITOS:</th>
-                <li>RE-lançar as noticias no banco de dados</li>
-                <li>aparecer as noticias na home</li>
-                <li>editar notícias na área privada</li>
-                <li>fazer uma página individual de cada noticia</li>
-                <li>permitir alterar foto perfil</li>
+                <tr><li>RE-lançar as noticias no banco de dados</li></tr>
+                <tr><li>aparecer as noticias na home</li></tr>
+                <tr><li>editar notícias na área privada</li></tr>
+                <tr><li>fazer uma página individual de cada noticia</li></tr>
         </table>
         <table>
             <th>EXTRAS:</th>
-                <li>usuário alterar sua foto</li>
-                <li>botão lembrar-me ficar com login feito</li>
-                <li>email de recuperação</li>
-                <li>dark/light theme</li>
-                <li>usuário (inscrever-se)</li>
-                <li>usuário curtir, usuário ver suas noticias curtidas</li>
-                <li>usuário receber notificação whatsapp nova notícia</li>
-                <li>default time zone</li>
+                <tr><li>usuário alterar sua foto</li></tr>
+                <tr><li>botão lembrar-me ficar com login feito</li></tr>
+                <tr><li>email de recuperação</li></tr>
+                <tr><li>dark/light theme</li></tr>
+                <tr><li>usuário (inscrever-se)</li></tr>
+                <tr><li>usuário curtir, usuário ver suas noticias curtidas</li></tr>
+                <tr><li>usuário receber notificação whatsapp nova notícia</li></tr>
+                <tr><li>default time zone?</li></tr>
         </table>
-    </p>
 </body>
 </html>
