fixed listarnoticiasbyid now showing content

--- a/Roadmap.html
+++ b/Roadmap.html
@@ -15,6 +15,7 @@
                 <tr><li>aparecer as noticias na home</li></tr>
                 <tr><li>editar notícias na área privada</li></tr>
                 <tr><li>fazer uma página individual de cada noticia</li></tr>
+                <tr><li>todas consultas sql mudar para prepare e fetch_assoc</li></tr>
         </table>
         <table>
             <th>EXTRAS:</th>
