--- a/Roadmap.html
+++ b/Roadmap.html
@@ -11,10 +11,10 @@
     <p>Listagem de coisas a ir fazendo:</p>
         <table>
             <th>REQUISITOS:</th>
+                <tr><li>noticia individual colocar botão pra voltar pra todas as notícias</li></tr>
                 <tr><li>RE-lançar as noticias no banco de dados</li></tr>
                 <tr><li>aparecer as noticias na home</li></tr>
                 <tr><li>editar notícias na área privada</li></tr>
-                <tr><li>fazer uma página individual de cada noticia</li></tr>
                 <tr><li>todas consultas sql mudar para prepare e fetch_assoc</li></tr>
         </table>
         <table>
